--- a/index.html
+++ b/index.html
@@ -625,11 +625,11 @@
 
             <div class="form-name">
 
-                <label class="form-name-label" for="people-names">Name</label>
+                <label class="form-name-label" for="user-name">Name</label>
 
                 <div class="form">
 
-                    <input class="form-input" type="text" name="user-name" id="name" required>
+                    <input class="form-input" type="text" name="user-name" id="user-name" required>
 
                     <svg class="icon-person" width="18" height="24">
 
@@ -648,7 +648,7 @@
                 <label class="form-name-label" for="user-phone">Phone</label>
 
                 <div class="form">
-                    <input class="form-input" type="tel" name="phone" id="user-phone" required>
+                    <input class="form-input" type="text" name="user-phone" id="user-phone" required>
 
                     <svg class="icon-person" width="18" height="24">
 
@@ -668,7 +668,7 @@
                     <div class="form">
 
 
-                        <input class="form-input" type="email" name="email" id="user-email" required>
+                        <input class="form-input" type="text" name="user-email" id="user-email" required>
 
                         <svg class="icon-person" width="18" height="24">
 
