--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 
                 <svg class="close-icon" width="8" height="8">
 
-                    <use href="./images/icons.svg#icon-close">
+                    <use href="./images/icons.svg#icon-close-black">
                     </use>
                 </svg>
             </button>
@@ -650,7 +650,7 @@
 
                     <svg class="icon-person" width="18" height="24" >
 
-                        <use href="./images/icons.svg#icon-Vector">
+                        <use href="./images/icons.svg#icon-phone">
 
                         </use>
 
@@ -668,7 +668,7 @@
                     <div class="form">
 
 
-                        <input class="form-input" type="text" name="user-email" id="user-email" required>
+                        <input class="form-input" type="email" name="user-email" id="user-email" required>
 
                         <svg class="icon-person" width="18" height="24" >
 
@@ -689,20 +689,20 @@
                         placeholder="Text input"></textarea>
                 </div>
 
-                <div class="checkbox-container">
+                <div class="checkbox-container" >
 
                     <input class="checkbox visually-hidden" type="checkbox" name="user-privacy" id="user-privacy"
                         value="true">
 
 
-                    <label class="checkbox-text" for="user-privacy">
+                    <label class="checkbox-text" for="user-privacy" >
                         I accept the terms and conditions of the
 
 
                     <span class="checkbox-span">
                         <svg class="checkbox-icon" width="10" height="8" fill="#8E8F99">
 
-                            <use href="./images/icons.svg#icons-checkbox">
+                            <use href="./images/icons.svg#icon-Vector">
 
                             </use>
 
